kustomize/base/overlay-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"mariadb"}]'
    app.openshift.io/route-disabled: "false"
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"overlay:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"overlay\")].image"}]
  labels:
    app: overlay
    app.kubernetes.io/component: overlay
    app.kubernetes.io/instance: overlay
    app.kubernetes.io/name: overlay
    app.kubernetes.io/part-of: kolab-app
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: latest
  name: overlay
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: overlay
  strategy:
    rollingUpdate:
      maxSurge: 1
      timeoutSeconds: 120
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: overlay
        deployment: overlay
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: kolab
        - configMapRef:
            name: kolab
        image: overlay:latest
        imagePullPolicy: Always
        startupProbe:
          exec:
            command:
            - ./artisan
            - octane:status
          failureThreshold: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          exec:
            command:
            - ./artisan
            - status:health
            - --check=DB
            - --check=Redis
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 3
          exec:
            command:
            - ./artisan
            - octane:status
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: overlay
        ports:
        - containerPort: 8000
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
