kustomize/base/kolab-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"mariadb"}]'
  labels:
    app: kolab
    app.kubernetes.io/component: kolab
    app.kubernetes.io/instance: kolab
    app.kubernetes.io/name: kolab
    app.kubernetes.io/part-of: kolab-app
  name: kolab
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8000-tcp
    port: 8000
  selector:
    app: kolab
    deployment: kolab
